--- a/2-1단원 (입력과 변수 기초).ipynb
+++ b/2-1단원 (입력과 변수 기초).ipynb
@@ -2,15 +2,54 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "9cbcaaf4-b0f1-403c-bcd7-137c7091b081",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# **[2-1단원] 입력과 변수 기초**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f8123c9-d26a-414e-b633-b7587a5d8a9c",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## **🎯 학습 목표**\n",
+    "**input 함수를 활용해 데이터를 입력받아 변수에 넣고, 간단한 연산을 해봅시다.**\n",
+    "\n",
+    ">--- \n",
+    ">**💻 코드 미리보기:**\n",
+    ">\n",
+    "> **`input(\"메시지\")`**  \n",
+    "> 데이터를 입력받습니다. 이때 \"메시지\"의 내용이 입력창에 출력됩니다.  \n",
+    "> **`변수 = 데이터`**   \n",
+    "> 변수에 데이터를 대입합니다.  \n",
+    "> **`변수 = input(\"메시지\")`**  \n",
+    "> \"메시지\"를 출력하고 데이터를 입력받은 다음, 입력받은 데이터를 변수에 대입합니다.\n",
+    "> ---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee0d5fdf-ebf0-4b0c-8e59-b774a2a85c1e",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6c449232-b2eb-4bd9-b4ea-c94739d85791",
    "metadata": {},
    "source": [
-    "## **프로그래밍에서 입력이란?**\n",
+    "## **프로그래밍에서 입력이란 무엇인가요?**\n",
     "\n",
-    "* **입력이 필요한 이유**  \n",
-    "프로그램이 입력을 전혀 받지 않는다면, 외부와 상호작용을 할 수 없습니다.  \n",
-    "컴퓨터는 자료를 입력하는 명령어로 입력장치를 통해 자료를 입력 받고, 출력 명령어를 활용해 실행결과를 보여줄 수 있습니다.\n",
-    "프로그램은 입력된 자료를 이용하여 명령을 수행하기 때문에 자료를 입력하게 해주는 함수는 필수적입니다.  \n",
+    "- 프로그램이 입력을 전혀 받지 않는다면, 외부와 상호작용을 할 수 없습니다.    \n",
+    "- 컴퓨터는 자료를 입력하는 명령어로 자료를 입력 받고, 출력 명령어를 활용해 실행결과를 보여줄 수 있습니다.  \n",
+    "- 프로그램은 입력된 자료를 이용하여 명령을 수행하기 때문에 자료를 입력하게 해주는 함수는 필수적입니다.  \n",
     "\n",
     "\n",
     "\n"
@@ -34,17 +73,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c8846cb1-f59a-43fd-9ef3-5892673bd89d",
+   "metadata": {},
+   "source": [
+    "#### **예제 1 : 이름 입력하고 출력해보기**\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7e7310e0-4e8c-4432-b64a-702f24bffac1",
    "metadata": {
     "tags": [
-     "jce.problems.221.2-1단원_예제1"
+     "jce.problems.5.예제_1_이름_입력하고_출력해보기"
     ]
    },
    "outputs": [],
    "source": [
-    "#예제 1 : \"이름을 입력하세요\"를 먼저 출력 후 이름 입력하기\n",
+    "#예제_1_이름_입력하고_출력해보기\n",
     "\n",
     "name = input(\"이름을 입력하세요\")\n",
     "print(name)"
@@ -52,11 +99,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f7157307-016d-4d97-8f82-d8c329671f53",
+   "metadata": {},
+   "source": [
+    "#### 예제 1 해설\n",
+    ">`input(\"메시지\")` 코드를 실행하면 \"메시지\"가 출력되고 데이터를 입력받습니다.  \n",
+    "입력받은 데이터를 `name` 이라는 변수에 대입합니다.  \n",
+    "`print(name)`을 통해 `name` 안에 들어있는 변수를 출력합니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dd7288e4-841e-414b-894f-29045153f73d",
    "metadata": {},
    "source": [
-    "# <연습문제>\n",
-    "<a class=\"jcecodle-mk jcecodle-mk__problem-chip\" data-problem-id=\"180\" href='#jce-judge/open/180' target='_self'><span>입력과 출력 1</span></a>"
+    "### **💯 연습문제를 풀어봅시다**\n",
+    "1. <a class=\"jcecodle-mk jcecodle-mk__problem-chip\" data-problem-id=\"180\" href='#jce-judge/open/180' target='_self'><span>입력과 출력 1</span></a>"
    ]
   },
   {
@@ -66,8 +124,8 @@
    "source": [
     "## **변수란 무엇일까?**\n",
     "\n",
-    "* **변수 : 수학적 정의로는 변할 수 있는 숫자를 의미합니다.**\n",
-    "> 코딩을 할 때에는 숫자보다는 자료를 저장하는 공간이라고 생각하면 좋습니다. \n",
+    "* **변수 : 데이터를 저장하기 위한 공간**\n",
+    "> 데이터를 저장할 수 있는 메모리입니다. 저장한 값을 변경할 수 있습니다. \n",
     "\n",
     "* **변수의 종류**\n",
     "> 숫자(정수는 int, 실수는 float), 문자열(str), 리스트(list), 딕셔너리 \n",
@@ -108,20 +166,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "64492e04-eeae-46c2-b624-a56471043403",
+   "metadata": {},
+   "source": [
+    "#### **예제 2 : 변수에 값을 저장하고 바꿔보기**\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "65ea004a-192b-4073-b325-49e606c006a6",
    "metadata": {
     "tags": [
-     "jce.problems.221.2-1단원_예제2"
+     "jce.problems.5.예제_2_변수에_값을_저장하고_바꿔보기"
     ]
    },
    "outputs": [],
    "source": [
-    "# 예제 2 \n",
+    "# 예제_2_변수에_값을_저장하고_바꿔보기\n",
     "a = 10\n",
     "a = 20\n",
     "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c81195fb-aa93-4b95-927e-49110083a6cc",
+   "metadata": {},
+   "source": [
+    "#### 예제 2 해설\n",
+    ">변수 a에 10이라는 데이터를 대입하고, 다음 줄에서 20이라는 데이터를 다시 대입하면 최종적으로 a에는 20이라는 데이터가 저장됩니다."
    ]
   },
   {
@@ -139,17 +214,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6962c964-48c7-41fd-b968-54c608a9469c",
+   "metadata": {},
+   "source": [
+    "#### **예제 3 : 변수 이름 짓고 데이터 넣어보기**\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6df3f766-77ca-4e23-8db3-5ef33de9bf77",
    "metadata": {
     "tags": [
-     "jce.problems.221.2-1단원_예제3"
+     "jce.problems.5.예제_3_변수_이름_짓고_데이터_넣어보기"
     ]
    },
    "outputs": [],
    "source": [
-    "# 예제 3\n",
+    "# 예제_3_변수_이름_짓고_데이터_넣어보기\n",
     "pizza = 30000\n",
     "coffee = 2500\n",
     "print(coffee)"
@@ -174,17 +257,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fbfd5682-1f43-47fe-9652-49c032ee5d73",
+   "metadata": {},
+   "source": [
+    "#### **예제 4 : 변수로 사칙연산하기**\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "23d2e9e1-ce7c-4855-85cd-69417490eb7f",
    "metadata": {
     "tags": [
-     "jce.problems.221.2-1단원_예제4"
+     "jce.problems.5.예제_4_변수로_사칙연산하기"
     ]
    },
    "outputs": [],
    "source": [
-    "#예제 4\n",
+    "# 예제_4_변수로_사칙연산하기\n",
     "\n",
     "A = 7 # 변수 A에 7을 저장합니다.\n",
     "B = 2 # 변수 B에 2를 저장합니다.\n",
@@ -203,8 +294,16 @@
    "metadata": {},
    "source": [
     "* 문자열도 더하고 곱할 수 있습니다. \n",
-    "> \"+\"연산자 : 문자열을 연결해주는 연산자입니다. (문자열+문자열)\n",
-    "> \"*\"연산자 : 같은 문자를 여러 번 출력해주는 연산자입니다. (문자열*정수)"
+    "> **\"+\"연산자** : 문자열을 연결해주는 연산자입니다. (문자열+문자열)  \n",
+    "> **\"\\*\"연산자** : 같은 문자를 여러 번 출력해주는 연산자입니다. (문자열*정수)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "480bb9cd-062b-424e-8773-c435321b3888",
+   "metadata": {},
+   "source": [
+    "#### **예제 5 : 문자로 연산하기**\n"
    ]
   },
   {
@@ -213,12 +312,12 @@
    "id": "fe7186b9-4f04-474c-855d-a64fccc7c996",
    "metadata": {
     "tags": [
-     "jce.problems.221.2-1단원_예제5"
+     "jce.problems.5.예제_5_문자로_연산하기"
     ]
    },
    "outputs": [],
    "source": [
-    "#예제 5\n",
+    "# 예제_5_문자로_연산하기\n",
     "\n",
     "a = '코들'   # 변수 a에 '코들'을 저장합니다.\n",
     "b = ' 파이썬' # 변수 b에 '파이썬'을 저장합니다.\n",
@@ -227,17 +326,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2f40a3f7-f907-417f-bfe2-4d634c3f814b",
+   "metadata": {},
+   "source": [
+    "#### **예제 6 : 문자와 정수를 곱하기**\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ba6aabe7-515e-45c0-82d7-287e6651ca27",
    "metadata": {
     "tags": [
-     "jce.problems.221.2-1단원_예제6"
+     "jce.problems.5.예제_6_문자와_정수를_곱하기"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "코들 \n"
+     ]
+    }
+   ],
    "source": [
-    "#예제 6\n",
+    "# 예제_6_문자와_정수를_곱하기\n",
     "\n",
     "a = '코들 '   # 변수 a에 '코들'을 저장합니다.\n",
     "\n",
@@ -246,22 +361,60 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49a43fe9-dd22-45cf-8ab8-53caeab3642c",
+   "id": "4588d2de-3253-46d7-9610-f36f5367ea78",
    "metadata": {},
    "source": [
-    "# <추가문제>\n",
-    "이번 단원과 관련된 문제가 추천됩니다.\n",
+    "> **⛔️ 오류(ERROR):**\n",
+    ">\n",
+    "> 문자열에는 정수만 곱할 수 있습니다. 3.5와 같이 정수가 아닌 숫자를 곱하면 오류가 발생합니다.\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c86ea83-081e-434e-819d-80c3dd381c98",
+   "metadata": {},
+   "source": [
+    "#### **예제 6-1 : 문자에 정수가 아닌 숫자를 곱하면?**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d44dd0df-f74b-4d22-9e61-7cd6fe8768c0",
+   "metadata": {
+    "tags": [
+     "jce.problems.221.2-1단원_예제6"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "코들 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# 예제_6-1_문자에_정수가_아닌_숫자를_곱하면?\n",
     "\n",
-    "앞선 문제들을 모두 풀어야 다음 문제가 추천됩니다.\n",
+    "a = '코들 '   # 변수 a에 '코들'을 저장합니다.\n",
     "\n",
-    "다양한 문제를 통해 실력을 키워보아요!!!\n",
+    "print(a * 3.5) # 코들을 3.5번 출력합니다???"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44ff6604-18ce-4d6b-8ecd-031f4b9be537",
+   "metadata": {},
+   "source": [
+    "### **💯 연습문제를 풀어봅시다**\n",
+    "2. <a class=\"jcecodle-mk jcecodle-mk__problem-chip\" data-problem-id=\"Md5jQhE9eZ0\" href='#jce-judge/open/Md5jQhE9eZ0' target='_self'><span>친구 소개하기_빈칸</span></a>\n",
+    "<a class=\"jcecodle-mk jcecodle-mk__problem-chip\" data-problem-id=\"utaaIQgBaek\" href='#jce-judge/open/utaaIQgBaek' target='_self'><span>친구 소개하기</span></a>\n",
     "\n",
-    "<a\n",
-    "  class=\"jcecodle-mk jcecodle-mk__recommend-problem-from-problem-collection-chip\" \n",
-    "  data-problem-collection-id=\"552\"\n",
-    "  href='#jce-judge/recommend_problem_from_problem_collection/552' target='_self'>\n",
-    "  <span>2-1단원(입력과 변수 기초)</span>\n",
-    "</a>"
+    "3. <a class=\"jcecodle-mk jcecodle-mk__problem-chip\" data-problem-id=\"-LAh_ONiVXQ\" href='#jce-judge/open/-LAh_ONiVXQ' target='_self'><span>저승사자</span></a>\n",
+    "\n"
    ]
   }
  ],
