--- a/2-1단원 (입력과 변수 기초).ipynb
+++ b/2-1단원 (입력과 변수 기초).ipynb
@@ -295,7 +295,15 @@
    "source": [
     "* 문자열도 더하고 곱할 수 있습니다. \n",
     "> **\"+\"연산자** : 문자열을 연결해주는 연산자입니다. (문자열+문자열)  \n",
-    "> **\"\\*\"연산자** : 같은 문자를 여러 번 출력해주는 연산자입니다. (문자열*정수)"
+    "> **\"\\*\"연산자** : 같은 문자를 여러 번 출력해주는 연산자입니다. (문자열*정수)\n",
+    "\n",
+    "> **⚠️ 주의(WARNING):**\n",
+    ">\n",
+    "> **여러개의 문자열을 더해서 출력하는 것과 `print()` 함수에 변수들을 ,(반점:comma)로 분리하여 출력하는 것에는 차이가 있습니다.**\n",
+    "> \n",
+    "> `print()` 함수에 변수들을 ,로 분리하여 출력하는 것은 `print()` 함수가 인자로 받은 변수들을 공백으로 구분하여 출력하는 것입니다.\n",
+    "> 이것과는 다르게 여러개의 문자열을 더해서 출력하는 것은 문자열들을 `+` 연산으로 이어붙인 뒤 그 결과를 `print()` 함수를 이용해 출력하는 것입니다.  \n",
+    "> 문자열간의 `+` 연산은 출력에만 사용되는 것이 아니라 문자열을 이어 붙여야 하는 다양한 상황에 사용할 수 있습니다."
    ]
   },
   {
@@ -308,21 +316,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fe7186b9-4f04-474c-855d-a64fccc7c996",
    "metadata": {
     "tags": [
      "jce.problems.5.예제_5_문자로_연산하기"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "코들 파이썬\n",
+      "코들  파이썬\n"
+     ]
+    }
+   ],
    "source": [
     "# 예제_5_문자로_연산하기\n",
     "\n",
     "a = '코들'   # 변수 a에 '코들'을 저장합니다.\n",
     "b = ' 파이썬' # 변수 b에 '파이썬'을 저장합니다.\n",
     "\n",
-    "print(a + b) # a와 b를 이어붙인 문자열을 출력합니다.  "
+    "print(a + b) # a와 b를 이어붙인 문자열을 출력합니다.  \n",
+    "print(a, b) # a와 b를 공백으로 구분하여 출력합니다."
    ]
   },
   {
@@ -410,9 +428,8 @@
    "metadata": {},
    "source": [
     "### **💯 연습문제를 풀어봅시다**\n",
-    "2. <a class=\"jcecodle-mk jcecodle-mk__problem-chip\" data-problem-id=\"Md5jQhE9eZ0\" href='#jce-judge/open/Md5jQhE9eZ0' target='_self'><span>친구 소개하기_빈칸</span></a>\n",
-    "<a class=\"jcecodle-mk jcecodle-mk__problem-chip\" data-problem-id=\"utaaIQgBaek\" href='#jce-judge/open/utaaIQgBaek' target='_self'><span>친구 소개하기</span></a>\n",
-    "\n",
+    "1. <a class=\"jcecodle-mk jcecodle-mk__problem-chip\" data-problem-id=\"Md5jQhE9eZ0\" href='#jce-judge/open/Md5jQhE9eZ0' target='_self'><span>친구 소개하기_빈칸</span></a>\n",
+    "2. <a class=\"jcecodle-mk jcecodle-mk__problem-chip\" data-problem-id=\"utaaIQgBaek\" href='#jce-judge/open/utaaIQgBaek' target='_self'><span>친구 소개하기</span></a>\n",
     "3. <a class=\"jcecodle-mk jcecodle-mk__problem-chip\" data-problem-id=\"-LAh_ONiVXQ\" href='#jce-judge/open/-LAh_ONiVXQ' target='_self'><span>저승사자</span></a>\n",
     "\n"
    ]
