주석 설명 추가

--- a/2-1단원 (입력과 변수 기초).ipynb
+++ b/2-1단원 (입력과 변수 기초).ipynb
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fe7186b9-4f04-474c-855d-a64fccc7c996",
    "metadata": {
     "tags": [
@@ -328,8 +328,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "코들 파이썬\n",
-      "코들  파이썬\n"
+      "코들파이썬\n",
+      "코들 파이썬\n"
      ]
     }
    ],
@@ -337,8 +337,10 @@
     "# 예제_5_문자로_연산하기\n",
     "\n",
     "a = '코들'   # 변수 a에 '코들'을 저장합니다.\n",
-    "b = ' 파이썬' # 변수 b에 '파이썬'을 저장합니다.\n",
+    "b = '파이썬' # 변수 b에 '파이썬'을 저장합니다.\n",
     "\n",
+    "# 변수 a와 b를 + 로 더하여 출력하면 두 변수가 공백 없이 이어서 출력되고\n",
+    "# a와 b를 print 함수의 인자로 주어 출력하면 두 변수가 공백으로 구분되어 출력됩니다.\n",
     "print(a + b) # a와 b를 이어붙인 문자열을 출력합니다.  \n",
     "print(a, b) # a와 b를 공백으로 구분하여 출력합니다."
    ]
